# advent-of-code

./: .gitignore  README.md
2019/day1.1/: README.md  main.go
2019/day10.1/: main.go
2019/day10.2/: main.go
2019/day11.1/: README.md
2019/day12.1/: main.go
2019/day12.2/: README.md  main.go
2019/day13.1/: README.md
2019/day13.2/: input.txt  main.go
2019/day14.1/: README.md
2019/day14.2/: README.md  main.go
2019/day2.2/: README.md
2019/day4.1/: README.md
2019/day4.2/: main.go
2019/day5.1/: README.md
2019/day6.1/: README.md
2019/day6.2/: README.md
2019/day7.2/: README.md  main.go
2019/day8.1/: README.md  main.go
2019/day8.2/: main.go
2020/: .gitignore  build.gradle.kts  settings.gradle.kts
2020/day10/: Solution.kt
2020/day11/: Solution.kt
2020/day12/: Solution.kt
2020/day2/: Solution.kt
2020/day3/: README.md
2020/day4/: README.md
2020/day7/: README.md  Solution.kt
2020/day9/: README.md
2021/day1/: README.md
2021/day10/: README.md  Solution.kt
2021/day11/: README.md  Solution.kt
2021/day12/: README.md  Solution.kt
2021/day13/: README.md  Solution.kt
2021/day14/: README.md  Solution.kt
2021/day15/: Solution.kt
2021/day16/: Solution.kt
2021/day2/: README.md  Solution.kt
2021/day3/: README.md
2021/day4/: README.md
2021/day5/: README.md  Solution.kt
2021/day6/: README.md  Solution.kt
2021/day7/: README.md  Solution.kt
2021/day8/: README.md  Solution.kt
2022/: CMakeLists.txt  runner.cpp
2023/: CMakeLists.txt  runner.cpp
2023/day1/: SolutionDay1.cpp  SolutionDay1.h
2023/day10/: SolutionDay10.cpp  SolutionDay10.h
2023/day11/: SolutionDay11.cpp  SolutionDay11.h
2023/day12/: SolutionDay12.cpp  SolutionDay12.h
2023/day13/: SolutionDay13.cpp  SolutionDay13.h
2023/day17/: SolutionDay17.cpp  SolutionDay17.h
2023/day18/: SolutionDay18.cpp  SolutionDay18.h
2023/day2/: SolutionDay2.cpp  SolutionDay2.h
2023/day3/: SolutionDay3.cpp  SolutionDay3.h
2023/day4/: SolutionDay4.cpp  SolutionDay4.h
2023/day5/: SolutionDay5.cpp  SolutionDay5.h
2023/day6/: SolutionDay6.cpp  SolutionDay6.h
2023/day7/: SolutionDay7.cpp  SolutionDay7.h
2023/day8/: SolutionDay8.cpp  SolutionDay8.h
2023/day9/: SolutionDay9.cpp  SolutionDay9.h
2023/util/: ReadFileInput.h
2024/: CMakeLists.txt  CMakePresets.json  runner.cpp
2024/day1/: SolutionDay1.cpp  SolutionDay1.h
2024/day2/: SolutionDay2.cpp  SolutionDay2.h
2024/day3/: SolutionDay3.cpp  SolutionDay3.h
2024/day4/: SolutionDay4.cpp  SolutionDay4.h
cpputil/: ReadFileInput.cpp  ReadFileInput.h
day1.1/: README.md  main.go
day1.2/: README.md  main.go
day10.1/: README.md  main.go
day10.2/: README.md
day11.1/: main.go
day11.2/: README.md  main.go
day12.1/: README.md
day12.2/: input.txt  main.go
day13.1/: main.go
day13.2/: README.md  main.go
day14.1/: main.go
day15.1/: README.md  main.go
day16.1/: README.md  main.go
day2.1/: README.md  input.txt  main.go
day2.2/: README.md  main.go
day3.1/: README.md  main.go
day3.2/: README.md  main.go
day4.1/: README.md  main.go
day4.2/: README.md
day5.1/: README.md  main.go
day5.2/: README.md  main.go
day6.1/: README.md  main.go
day6.2/: README.md  main.go
day7.1/: README.md  main.go
day7.2/: README.md
day8.1/: README.md
day8.2/: README.md
day9.1/: README.md  main.go
day9.2/: README.md  main.go
(+70 files in other folders)
